--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -42,9 +42,18 @@
 }
 
 .book {
-  background-image: url(../img/nat-10.jpg);
+  background-image: linear-gradient(
+      105deg,
+      rgba($color-white, 0.9) 49.9%,
+      transparent 50%
+    ),
+    url(../img/nat-10.jpg);
   background-size: 100%;
   border-radius: $border-radius-small;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
-  height: 50rem;
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
 }
